[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutyjs"
version = "0.2.8"
description = "A lightweight rule-based JavaScript/TypeScript code formatter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
  { name = "AttAditya" }
]
dependencies = [
  "langex"
]

keywords = ["javascript", "typescript", "formatter", "code-formatter", "lint", "formatting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/AttAditya/cutyjs"
Repository = "https://github.com/AttAditya/cutyjs"
Issues = "https://github.com/AttAditya/cutyjs/issues"

[project.scripts]
cutyjs = "cutyjs.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cutyjs*"]